[package]
name = "utools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = "0.4.41"
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", features = [
    "tree-sitter-languages",
] }
percent-encoding = "2.3.1"
rust-embed = "8.7.2"
serde = "1.0.219"
serde_json = "1.0.142"
