[package]
name = "utools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = "0.4.41"
gpui = "0.2.2"
gpui-component = { version = "0.3.1", features = [
    "tree-sitter-languages",
] }
html-escape = "0.2.13"
percent-encoding = "2.3.1"
rust-embed = "8.7.2"
serde = "1.0.219"
serde_json = "1.0.142"
similar = "2.7.0"
